    loaded from different fasl files may be collapsed to one object.
    If the variable is set to 2, then additionally strings which are
    STRING= in code resulting from COMPILE can be coalesced.
    For instance, two functions returning the literal string "HI"
    might return EQ strings after collapsing, which may be undesired
    in a particular use. The flag pertains to gencgc only.
  * bug fix: MAKE-PATHNAME removes empty strings as components of a
    directory, as is permitted: "Whenever a pathname is constructed
    the components may be canonicalized if appropriate."
  * optimization: various printer and FORMAT performance enhancements.

changes in sbcl-1.3.17 relative to sbcl-1.3.16:
  * enhancement: memory overhead from the garbage collector's metadata
    is reduced on 64-bit architectures; no change for 32-bit.
  * enhancement: further garbage collector speedups affecting
    pinned objects on conservative backends, and simple-vectors.
  * enhancement: on Linux a custom handler for SIGSEGV can be called
    for page faults outside of dynamic space by changing the C symbol
    "sbcl_fallback_sigsegv_handler".
  * bug fix: sb-cover does not lose source positions for AND/OR/COND.
  * bug fix: random disassembler failures. (lp#1527931)
  * The bundled sb-md5 contrib has been updated to release 2.0.4
    which is licensed under Creative Commons CC0 per author's statement
    https://github.com/pmai/md5/commit/fd134e71b71a10ab78905833a7cb9d4d6817c589
    (Refer to NEWS and COPYING in the contrib/sb-md5 subdirectory)

changes in sbcl-1.3.16 relative to sbcl-1.3.15:
  * optimization: various small tweaks give around 5% faster garbage
    collection
  * bug fix: better detection of when an impossible code path does
    not need a warning.  (lp#1668619)
  * bug fix: stronger attempts to disable position-independent
    executable building.  (lp#1668986, patch from Mark Wright)
  * bug fix: OPEN :IF-EXISTS NIL signalled a condition on Windows.