@@ -22,6 +22,7 @@ changes relative to sbcl-1.3.17:
     For instance, two functions returning the literal string "HI"
     might return EQ strings after collapsing, which may be undesired
     in a particular use. The flag pertains to gencgc only.
+  * enhancement: SXHASH values on pathnames are better distributed
   * bug fix: MAKE-PATHNAME removes empty strings as components of a
     directory, as is permitted: "Whenever a pathname is constructed
     the components may be canonicalized if appropriate."
